# RSSPub

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docker-publish.yml
src/: email.rs  epub_gen.rs  processor.rs  routes.rs  scheduler.rs  templates.rs
src/db/: category_db.rs  migration.rs  mod.rs  schema_init.rs
src/handlers/: download_handler.rs  email_handler.rs  read_it_later_handler.rs  schedule_handler.rs
src/models/: mod.rs
templates/: article.html
tests/: epub_gen_tests.rs
ui/src/components/: EmailConfigSection.svelte  GeneralConfigSection.svelte  ScheduleForm.svelte  SchedulesSection.svelte
ui/src/lib/: store.ts  types.ts
