[package]
name = "rsspub"
version = "0.110.1"
edition = "2024"

[dependencies]
feed-rs = "2.3.1"
reqwest = { version = "0.13.2", features = ["json", "blocking", "cookies", "rustls", "charset"],default-features = false }
tokio = { version = "1.51", features = ["full"] }
epub-builder = "0.8.3"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0" # For error handling
axum = { version = "0.8.8", features = ["multipart"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dom_smoothie = "0.17.0"
rusqlite = { version = "0.39.0", features = ["bundled","fallible_uint"] }
tokio-cron-scheduler = "0.15.1"
opml = "1.1.6"
lettre = { version = "0.11.21",default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport","builder"] }
libvips = { version = "1.7.3", optional = true }
regex = "1.12"
ammonia = "4.1.2"
tempfile = "3.27.0"
image = "0.25.10"
uuid = { version = "1.23.0",features = ["v4", ] }
base64 = "0.22.1"
indicatif = "0.18.4"
tikv-jemallocator = {version ="0.6.1",optional = true,features = ["unprefixed_malloc_on_supported_platforms"] }
tikv-jemalloc-ctl = {version ="0.6.1",optional = true }
dom_query = "0.27.0"
serde_yaml = "0.9"
url = "2.5.8"
askama = "0.16.0"
arc-swap = "1.9.1"
ab_glyph = "0.2.32"

[features]
default = []
mem_opt = ["dep:libvips"]
alternative-alloc = ["tikv-jemallocator","tikv-jemalloc-ctl"]

[dev-dependencies]
zip = "8.5.1"
